--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "bot",
+  "name": "klakier-chatbot",
   "version": "1.0.0",
-  "type": "module",
+  "description": "AI Chatbot powered by Discord + OpenAI",
   "main": "index.js",
-  "license": "ISC"
-},
-  "keywords": [],
+  "scripts": {
+    "start": "node index.js"
+  },
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "discord.js": "^14.24.2",
-    "dotenv": "^17.2.3",
-    "openai": "^6.7.0"
+    "discord.js": "^14.15.3",
+    "openai": "^4.0.0",
+    "dotenv": "^16.3.1"
   }
 }
